--- a/NeuralWorkshop/css/neural.css
+++ b/NeuralWorkshop/css/neural.css
@@ -1,7 +1,20 @@
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
 #viewer {
-    width: 800px;
-    height: 600px;
-    border: black 1px solid;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    //border: black 1px solid;
     box-sizing: content-box;
     background-color: lightgray;
+}
+
+#controls {
+    position: absolute;
+    bottom: 0;
+    margin: 8px;
 }
