--- a/particles/style.css
+++ b/particles/style.css
@@ -1,7 +1,7 @@
 #view {
     position: absolute;
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
 }
 
 .button {
@@ -27,6 +27,11 @@
     padding: 1em;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 body.displayControls #controls {
     display: block;
 }
@@ -37,11 +42,6 @@ body:not(.fullscreen) #goFullscreen {
 
 body.fullscreen #exitFullscreen {
     display: inline-block;
-}
-
-body.fullscreen {
-    margin: 0;
-    padding: 0;
 }
 
 body.fullscreen #view {
