--- a/particles/style.css
+++ b/particles/style.css
@@ -19,6 +19,51 @@
     display: none;
 }
 
+#yeets {
+    display: none;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    font-family: Arial, sans-serif;
+    font-size: 60px;
+    font-style: italic;
+    text-shadow: -2px -2px 2px cyan, 2px -2px 2px #444, -2px 2px 2px #444, 2px 2px 2px magenta;
+    color: #666;
+}
+
+#yeets.pop {
+    display: inline-block;
+    opacity: 0;
+    animation: yeetIn 4s linear;
+}
+
+@keyframes yeetIn {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0) rotate(90deg);
+    }
+
+    4% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1.6) rotate(-10deg);
+    }
+
+    6% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1) rotate(0deg);
+    }   
+
+    92% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scaleX(20) scaleY(0);
+    }
+}
+
 #controls {
     display: none;
     position: absolute;
@@ -32,6 +77,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body.fullscreen:not(.displayControls) {
